--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -99,7 +99,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Pracovn&iacute; plocha Part Design</a> pro vytv&aacute;&#345;en&iacute; d&iacute;l&#367; na z&aacute;klad&#283; n&aacute;&#269;rt&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Points.svg&amp;filetimestamp=20200404174800&amp;.html" class="mw-file-description"><img src="../File/Workbench_Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Points_Workbench.html" title="Points Workbench">Pracovn&iacute; plocha Points</a> pro pr&aacute;ci s mra&#269;ny bod&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Reverse_Engineering.svg&amp;filetimestamp=20200404173756&amp;.html" class="mw-file-description"><img src="../File/Workbench_Reverse_Engineering.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench">Pracovn&iacute; plocha Reverse Engineering</a> je ur&#269;ena k poskytov&aacute;n&iacute; specifick&yacute;ch n&aacute;stroj&#367; pro p&#345;evod tvar&#367;/teles/s&iacute;t&iacute; na parametrick&eacute; prvky kompatibiln&iacute; s FreeCADem.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a> for working with geometry-constrained sketches.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plocha Sketcher</a> pro pr&aacute;ci s n&aacute;&#269;rtky s geometrick&yacute;mi omezen&iacute;mi.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Spreadsheet Workbench</a> for creating and manipulating spreadsheet data.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Surface_Workbench.html" title="Surface Workbench">Surface Workbench</a> provides tools to create and modify surfaces. It is similar to the <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> Face from edges option.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">TechDraw Workbench</a> for producing technical drawings from 3D models. It is the successor of the <a href="../Drawing_Workbench.html" title="Drawing Workbench">Drawing Workbench</a>.</li></ul>
@@ -151,12 +151,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112030213
+Cached time: 20260112030303
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.140 seconds
-Real time usage: 0.294 seconds
+CPU time usage: 0.125 seconds
+Real time usage: 0.233 seconds
 Preprocessor visited node count: 201/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -167,16 +167,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.852      1 -total
- 53.05%   24.854      1 Template:Manual:TOC
- 46.38%   21.730      1 Manual:Summary/cs
- 12.54%    5.875      2 Template:MenuCommand
- 10.67%    5.001      2 Template:VersionMinus
-  9.85%    4.613      3 Template:Version
-  9.04%    4.237      2 Template:Docnav
+100.00%   18.844      1 -total
+ 42.88%    8.081      1 Template:Manual:TOC
+ 32.38%    6.101      1 Manual:Summary/cs
+ 16.26%    3.065      2 Template:VersionMinus
+ 14.45%    2.723      3 Template:Version
+ 12.09%    2.278      2 Template:Docnav
+  8.49%    1.600      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112030212 and revision id 1737006. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112030303 and revision id 1737008. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
