--- a/wiki/cs/Manual;The_FreeCAD_Interface.html
+++ b/wiki/cs/Manual;The_FreeCAD_Interface.html
@@ -102,7 +102,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plocha Sketcher</a> pro pr&aacute;ci s n&aacute;&#269;rtky s geometrick&yacute;mi omezen&iacute;mi.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Pracovn&iacute; plocha Spreadsheet</a> Pracovn&iacute; plocha Spreadsheet.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Surface_Workbench.html" title="Surface Workbench">Pracovn&iacute; plocha Surface</a> poskytuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; a &uacute;pravy povrch&#367;. Je podobn&yacute; funkci <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> Vytvo&#345;it plochu z hran.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">TechDraw Workbench</a> for producing technical drawings from 3D models. It is the successor of the <a href="../Drawing_Workbench.html" title="Drawing Workbench">Drawing Workbench</a>.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; plocha TechDrawh</a> pro vytv&aacute;&#345;en&iacute; technick&yacute;ch v&yacute;kres&#367; z 3D model&#367;. Je n&aacute;stupcem programu <a href="../Drawing_Workbench.html" title="Drawing Workbench">Drawing Workbench</a>.</li></ul>
 <h4><span class="mw-headline" id="Disabled_workbenches">Disabled workbenches</span></h4>
 <p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span> The following rarely used workbenches are <a href="../Workbenches.html#Current" title="Workbenches">disabled</a> by default, they can be enabled in <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>:
 </p>
@@ -151,12 +151,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112030546
+Cached time: 20260112030649
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.120 seconds
-Real time usage: 0.180 seconds
+CPU time usage: 0.109 seconds
+Real time usage: 0.178 seconds
 Preprocessor visited node count: 201/1000000
 Post&#8208;expand include size: 8651/2097152 bytes
 Template argument size: 750/2097152 bytes
@@ -167,16 +167,16 @@ Unstrip post&#8208;expand size: 2911/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.820      1 -total
- 46.44%    6.883      1 Template:Manual:TOC
- 36.05%    5.343      1 Manual:Summary/cs
- 16.50%    2.445      2 Template:Docnav
- 11.89%    1.762      2 Template:VersionMinus
-  9.87%    1.463      3 Template:Version
-  9.29%    1.377      2 Template:MenuCommand
+100.00%   17.905      1 -total
+ 41.61%    7.451      1 Template:Manual:TOC
+ 33.43%    5.986      1 Manual:Summary/cs
+ 20.45%    3.662      3 Template:Version
+ 12.34%    2.210      2 Template:MenuCommand
+ 11.91%    2.132      2 Template:Docnav
+  8.23%    1.473      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112030546 and revision id 1737012. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410624-0!canonical and timestamp 20260112030649 and revision id 1737014. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
