--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -263,23 +263,23 @@
 <p><br>
 </p>
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;The_FreeCAD_Interface.html" title="Manual:The FreeCAD Interface">Manual The FreeCAD Interface</a></div>
-    <div><a href="../Manual;The_FreeCAD_document.html" title="Manual:The FreeCAD document">Manual The FreeCAD document</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../Manual;The_FreeCAD_Interface.html" title="Manual:The FreeCAD Interface">Rozhran&iacute; FreeCADu</a></div>
+    <div><a href="../Manual;The_FreeCAD_document.html" title="Manual:The FreeCAD document">Dokument FreeCADu</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112033528
+Cached time: 20260112033548
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.183 seconds
-Real time usage: 0.265 seconds
+CPU time usage: 0.169 seconds
+Real time usage: 0.223 seconds
 Preprocessor visited node count: 1263/1000000
-Post&#8208;expand include size: 21882/2097152 bytes
-Template argument size: 894/2097152 bytes
+Post&#8208;expand include size: 21822/2097152 bytes
+Template argument size: 854/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -287,16 +287,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.903      1 -total
- 44.29%   15.016     15 Template:ASCII
- 25.85%    8.763      1 Template:Manual:TOC
- 19.29%    6.539      1 Manual:Summary/cs
-  8.83%    2.994      2 Template:Docnav
-  6.67%    2.260     34 Template:KEY
-  3.36%    1.140      2 Template:Version
+100.00%   30.107      1 -total
+ 41.31%   12.437     15 Template:ASCII
+ 25.00%    7.526      1 Template:Manual:TOC
+ 19.64%    5.913      1 Manual:Summary/cs
+  8.59%    2.586      2 Template:Docnav
+  8.52%    2.567     34 Template:KEY
+  5.16%    1.553      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033528 and revision id 1737052. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033548 and revision id 1737054. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
