--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Nawigacja w oknie widoku 3D (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--high" title="Manual: Navegando na visualiza&ccedil;&atilde;o 3D (93% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--med" title="Manual:Navigare &icirc;n vizualizarea 3D (26% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;: &#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1074; &#1086;&#1082;&#1085;&#1077; 3D &#1074;&#1080;&#1076;&#1072; (93% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--med" title="&#25163;&#20876;&#65306;&#22312; 3D &#35270;&#22270;&#20013;&#23548;&#33322; (33% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;Navigating_in_the_3D_View.html" class="mw-pt-progress mw-pt-progress--med" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;3D &#12499;&#12517;&#12540;&#12398;&#25805;&#20316; (33% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -68,13 +68,14 @@
 <li><a href="../Manual;Creating_parametric_objects.html" title="Manual:Creating parametric objects">Creating parametric objects</a></li>
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
-<meta property="mw:PageProp/toc">
-<h3><span class="mw-headline" id="A_word_about_the_3D_space">A word about the 3D space</span></h3>
-<p>If you are new to 3D modeling applications, it's essential to understand some fundamental concepts before proceeding. If you already have experience with such software, you may skip this introduction.
+<p><span id="A_word_about_the_3D_space"></span>
+N&#283;kolik slov o 3D prostoru
+</p><p>If you are new to 3D modeling applications, it's essential to understand some fundamental concepts before proceeding. If you already have experience with such software, you may skip this introduction.
 </p><p>FreeCAD operates within a three-dimensional <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Euclidean_space">Euclidean space</a> which centers around an origin point defined by three axes: X, Y, and Z. Typically, when viewing from above in FreeCAD, the X axis extends horizontally to the right, the Y axis extends towards the back, and the Z axis moves vertically upwards. The intersection point of these axes, where each coordinate is zero, is known as the origin.
 </p><p>Every location in FreeCAD's space is determined by (x, y, z) coordinates. For instance, a point located at coordinates (2,3,1) is positioned 2 units along the X axis, 3 units along the Y axis, and 1 unit along the Z axis. Navigating this space is akin to manipulating a camera. You can move the camera left, right, up, or down (panning), swivel it around the focal point (rotating), or move it closer to or away from objects (zooming), allowing you to explore your design from various perspectives.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=3dspace_coordinates.jpg&amp;filetimestamp=20151213200233&amp;.html" class="mw-file-description"><img src="../File/3dspace_coordinates.jpg" decoding="async" width="640" height="375" class="mw-file-element" data-file-width="640" data-file-height="375"></a></span>
 </p>
+<meta property="mw:PageProp/toc">
 <h3><span class="mw-headline" id="The_FreeCAD_3D_View">The FreeCAD 3D View</span></h3>
 <h4><span class="mw-headline" id="Mouse_navigation">Mouse navigation</span></h4>
 <p>Navigating the <a href="../3D_View.html" title="3D View">3D View</a> in FreeCAD can be achieved using various inputs including a mouse, a Space Navigator device, keyboard shortcuts, a touchpad, or any combination thereof. FreeCAD offers a range of <a href="../Mouse_navigation.html" title="Mouse navigation">navigation styles</a> that define how the three fundamental viewing operations&mdash;pan, rotate, and zoom&mdash;are executed. Additionally, these styles govern how objects are selected within the workspace. To access and switch between these navigation styles, you can navigate to the <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a> or simply right-click in the <a href="../3D_View.html" title="3D View">3D View</a>. Additionally, there is a third, more immediate option for altering the navigation style directly from the user interface located in the lower-right part of the screen.
@@ -271,13 +272,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112033548
+Cached time: 20260112033612
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.169 seconds
-Real time usage: 0.223 seconds
-Preprocessor visited node count: 1263/1000000
+CPU time usage: 0.185 seconds
+Real time usage: 0.276 seconds
+Preprocessor visited node count: 1261/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
 Highest expansion depth: 7/100
@@ -287,16 +288,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.107      1 -total
- 41.31%   12.437     15 Template:ASCII
- 25.00%    7.526      1 Template:Manual:TOC
- 19.64%    5.913      1 Manual:Summary/cs
-  8.59%    2.586      2 Template:Docnav
-  8.52%    2.567     34 Template:KEY
-  5.16%    1.553      2 Template:Version
+100.00%   26.285      1 -total
+ 40.29%   10.590     15 Template:ASCII
+ 27.35%    7.188      1 Template:Manual:TOC
+ 19.43%    5.106      1 Manual:Summary/cs
+  8.91%    2.341      2 Template:Docnav
+  7.44%    1.956     34 Template:KEY
+  5.52%    1.450      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033548 and revision id 1737054. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033612 and revision id 1737056. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
